# Amend

./: Cargo.toml  Info.plist  README.md  build.rs  build_and_bundle_mac.sh  create_bundle_mac.sh  manifest.xml
src/: app.rs  file_ops.rs  lib.rs  main.rs  platform.rs  ui.rs
