[package]
name = "amend-editor"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "amend-editor"
path = "src/main.rs"

[profile.release]
# Optimize for size
opt-level = "z"
# Enable link-time optimization
lto = true
# Enable codegen units optimization
codegen-units = 1
# Strip debug symbols
strip = true
# Panic strategy
panic = "abort"
# Enable overflow checks (disabled for size)
overflow-checks = false

[dependencies]
eframe = { version = "0.26.2", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.26.2", default-features = false, features = ["default_fonts"] }
egui_extras = { version = "0.26.2", default-features = false }
rfd = { version = "0.13", default-features = false }
winreg = "0.52"
image = "0.24" 